# Llama-v2-cpp-chatbot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: chatbot.py  pyproject.toml
