[tool.poetry]
name = "llama-v2-cpp-chatbot"
version = "0.1.0"
description = "a simple chatbot application with llama-cpp and llama v2 models"
authors = ["Kevin Knights <kevinknights29@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llama_v2_cpp_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.237"
chainlit = "^0.5.2"
llama-cpp-python = "^0.1.73"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
